syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Transfer_sendService {
    rpc CreateTransfer_send(CreateTransfer_sendRequest) returns (Transfer_send) {}
    rpc GetByIDTransfer_send(Transfer_sendPrimaryKey) returns (Transfer_send) {}
    rpc GetListTransfer_send(GetListTransfer_sendRequest) returns (GetListTransfer_sendResponse) {}
    rpc UpdateTransfer_send(UpdateTransfer_sendRequest) returns (Transfer_send) {}
    rpc UpdatePatchTransfer_send(UpdatePatchTransfer_sendRequest) returns (Transfer_send) {}
    rpc DeleteTransfer_send(Transfer_sendPrimaryKey) returns (google.protobuf.Empty) {}
}

message Transfer_sendPrimaryKey {
    string id = 1;
}

message Transfer_send {
    string id = 1;
    string date_time = 2;
    string description = 3;
    string comments = 4;
    string user_id = 5;
    string user_id_2 = 6;
    string branch_id = 7;
    string branch_id_2 = 8;
    string created_at = 9;
    string updated_at = 10;
}

message CreateTransfer_sendRequest {
    string date_time = 1;
    string description = 2;
    string comments = 3;
    string user_id_2 = 4;
    string branch_id_2 = 5;
}

message UpdateTransfer_sendRequest {
    string id = 1;
    string date_time = 2;
    string description = 3;
    string comments = 4;
    string user_id = 5;
    string user_id_2 = 6;
    string branch_id = 7;
    string branch_id_2 = 8;
}

message UpdatePatchTransfer_sendRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTransfer_sendRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListTransfer_sendResponse {
    int32 count = 1;
    repeated Transfer_send transfer_sends = 2;
}
